# mobile-ai

./: .gitignore  README.md  gradle.properties  release.keystore  settings.gradle  setup_dependencies.sh
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  includes_fix.h
app/src/main/cpp/benchmark/: benchmark_manager.cpp  benchmark_manager.h
app/src/main/cpp/conversion/: model_converter.cpp  model_converter.h
app/src/main/cpp/core/: error_handler.cpp  error_handler.h
app/src/main/cpp/hardware/: hardware_accelerator.h  mtk_accelerator.cpp  mtk_accelerator.h  qualcomm_accelerator.cpp  qualcomm_accelerator.h
app/src/main/cpp/inference/: model_engine.cpp  model_engine.h  model_optimizer.cpp  model_optimizer.h
app/src/main/cpp/monitoring/: performance_monitor.cpp  performance_monitor.h
app/src/main/cpp/optimization/: model_optimizer.cpp  model_optimizer.h
app/src/main/java/com/mobileai/: MainActivity.kt
app/src/main/java/com/mobileai/core/: HardwareManager.kt
app/src/main/java/com/mobileai/exceptions/: InitializationException.kt
app/src/main/java/com/mobileai/hardware/: HardwareLifecycleManager.kt
app/src/main/java/com/mobileai/inference/: ModelLifecycleManager.kt  ModelManager.kt
app/src/main/java/com/mobileai/security/: SecurityManager.kt
app/src/main/java/org/tensorflow/lite/gpu/: GpuDelegate.java  GpuDelegateFactory.java
app/src/main/java/utils/: Constants.kt  SafetyChecks.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
examples/image_classification/: MainActivity.kt
examples/model_optimization/: ModelOptimizationExample.cpp  ModelOptimizationExample.kt
scripts/: setup_dependencies.sh
